Blender Bone Groups Assigning for linked blender file #84600

Closed
opened 2021-01-11 16:19:25 +01:00 by Oluwaleye Victor · 8 comments

System Information
Operating system: Windows
Graphics card: Nvidia

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen)
Worked: (newest version of Blender that worked as expected)

Short description of error
after linking blender rigged character file, when working in the linked file, adding of bone groups disappear after Quitting blender.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  • Open empty blender

  • link a rigged character file in the empty blender created

  • make the rig proxy

  • go to pose mode

  • select some bones and add them to the bone group and then assign the selected bones

  • Save the file and Quit blender

  • Open the linked file again and check the created bone groups

**System Information** Operating system: Windows Graphics card: Nvidia **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) Worked: (newest version of Blender that worked as expected) **Short description of error** after linking blender rigged character file, when working in the linked file, adding of bone groups disappear after Quitting blender. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). - Open empty blender - link a rigged character file in the empty blender created - make the rig proxy - go to pose mode - select some bones and add them to the bone group and then assign the selected bones - Save the file and Quit blender - Open the linked file again and check the created bone groups

Added subscriber: @oluwaleye.victor

Added subscriber: @oluwaleye.victor
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-01-11 18:07:09 +01:00
Member

Can confirm, same is true for overrides afaict.
UI tries to hint at that by greying out bone group operators, but they really should do a proper poll to not let you do unsupported stuff.

Or: this should be properly supported, will check on both if these.

Can confirm, same is true for overrides afaict. UI tries to hint at that by greying out bone group operators, but they really should do a proper poll to not let you do unsupported stuff. Or: this should be properly supported, will check on both if these.

Added subscriber: @mont29

Added subscriber: @mont29

you cannot support that easily currently, so yes, proper poll forbidding to create them on proxies or liboverrides is the way to go imho.

you cannot support that easily currently, so yes, proper poll forbidding to create them on proxies or liboverrides is the way to go imho.

This issue was referenced by 1c2b203795

This issue was referenced by 1c2b2037956bf1d46a10842a4b503d20714bdcf2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84600
No description provided.